src/objects/Notifications__c.object
<CustomObject>
    <fields>
        <fullName>AFSSecurityCode__c</fullName>
        <label>AFS Security Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Documents__c</fullName>
        <label>App Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicantAddress__c</fullName>
        <formula>Customer__r.MailingCity   + BR() + 
Customer__r.MailingState + &quot; &quot;  + Customer__r.MailingCountry + BR() +
Customer__r.MailingStreet+ &quot; &quot;  + Customer__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicantAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationTypeDesc__c</fullName>
        <label>Application Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <label>Application Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCOWebId__c</fullName>
        <label>CCO user WebId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currect_Task_Status__c</fullName>
        <label>Currect Task Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>Customer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <formula>Customer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notifications (Customer)</relationshipLabel>
        <relationshipName>Notification_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayUrl__c</fullName>
        <label>DisplayUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EAAmount__c</fullName>
        <label>EA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmailTemplateDate__c</fullName>
        <formula>CASE( 
MONTH(today()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)+ &quot; &quot; + 
TEXT(DAY (today())) + &quot;, &quot; + 
TEXT(YEAR (today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailTemplateDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Tracking_Day__c</fullName>
        <label>Email Tracking Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jb_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobOwnerEmail__c</fullName>
        <label>Job Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JobOwnerPhone__c</fullName>
        <label>Job Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NotifChangedBy__c</fullName>
        <label>Name of Person Who Changed Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifChangedDate__c</fullName>
        <label>Changed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotifChangedTime__c</fullName>
        <label>Changed Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>NotifCreatedBy__c</fullName>
        <label>Name of Person who Created the Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifCreatedDate__c</fullName>
        <label>Date on Which Record Was Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotifCreatedTime__c</fullName>
        <label>Time on Which Record Was Created</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>NotifDate__c</fullName>
        <label>Date of Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotifPriorityType__c</fullName>
        <label>Priority Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NotifPriority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NotifReportedBy__c</fullName>
        <label>Name of Person Reporting Notification</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifReqEndDate__c</fullName>
        <label>Required End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotifReqEndTime__c</fullName>
        <label>Requested End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>NotifReqStartDate__c</fullName>
        <label>Required start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotifReqStartTime__c</fullName>
        <label>Required Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>NotifTime__c</fullName>
        <description>NotifTime</description>
        <label>NotifTime</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationDesc__c</fullName>
        <label>Notification Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                    <label>AS – Application for service</label>
                </value>
                <value>
                    <fullName>ER</fullName>
                    <label>ER – Electric distribution asset replacement</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                    <label>GC – Gas distribution corrective</label>
                </value>
                <value>
                    <fullName>GR</fullName>
                    <label>GR – Gas distribution asset replacement</label>
                </value>
                <value>
                    <fullName>WR</fullName>
                    <label>WR – Work requested by others (WRO)</label>
                </value>
                <value>
                    <fullName>SG</fullName>
                    <label>SG - Staging ERR only</label>
                </value>
                <value>
                    <fullName>S9</fullName>
                    <label>S9 - Electric staging</label>
                </value>
                <value>
                    <fullName>OD</fullName>
                    <label>OD - Order Notification</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>EC – Electric distribution corrective</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <label>Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>SUBM</fullName>
                </value>
                <value>
                    <fullName>CLAM</fullName>
                </value>
                <value>
                    <fullName>ACCD</fullName>
                </value>
                <value>
                    <fullName>REJD</fullName>
                </value>
                <value>
                    <fullName>NASP</fullName>
                </value>
                <value>
                    <fullName>NAS</fullName>
                </value>
                <value>
                    <fullName>CNCL</fullName>
                </value>
                <value>
                    <fullName>PNAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjNumber__c</fullName>
        <label>ObjNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderObjNumber__c</fullName>
        <label>Order_ObjNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <label>Root Notif Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <label>Root Notif OBJNBR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>SAP External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureReceived__c</fullName>
        <label>Agreement to Pay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>JOB Notification status code</description>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOPR</fullName>
                </value>
                <value>
                    <fullName>ORAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_C_Sent__c</fullName>
        <description>Track the Date When Template C has been sent</description>
        <label>Template C Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Template_G_Sent__c</fullName>
        <label>Template G Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Construnction_Days__c</fullName>
        <formula>NotifReqEndDate__c - NotifDate__c</formula>
        <label>Total Construnction Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Status</label>
        <referenceTo>JO_Status__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZNOTIF_URL__c</fullName>
        <label>URL To SAP ZNOTIF</label>
        <type>Url</type>
    </fields>
    <label>Notifications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notification_Order__c</columns>
        <columns>NotificationType__c</columns>
        <columns>Notification_Status__c</columns>
        <columns>Jb_Owner__c</columns>
        <columns>Customer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NotifPriority__c</columns>
        <columns>NotifPriorityType__c</columns>
        <columns>NotifDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Job_Notification</fullName>
        <columns>NAME</columns>
        <columns>Notification_Order__c</columns>
        <columns>Jb_Owner__c</columns>
        <columns>NotifDate__c</columns>
        <columns>NotificationType__c</columns>
        <columns>SAP_External_Id__c</columns>
        <columns>Notification_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NotificationType__c</field>
            <operation>equals</operation>
            <value>AS,WR</value>
        </filters>
        <label>Job Notification</label>
    </listViews>
    <listViews>
        <fullName>Other_Notification</fullName>
        <columns>NAME</columns>
        <columns>NotificationType__c</columns>
        <columns>Jb_Owner__c</columns>
        <columns>Notification_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>msyal</value>
        </filters>
        <filters>
            <field>NotificationType__c</field>
            <operation>notEqual</operation>
            <value>AS,WR</value>
        </filters>
        <label>Other Notification</label>
    </listViews>
    <nameField>
        <label>Notifications Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <recordTypes>
        <fullName>AS</fullName>
        <active>true</active>
        <description>Application for service</description>
        <label>AS</label>
    </recordTypes>
    <recordTypes>
        <fullName>EC</fullName>
        <active>true</active>
        <description>Electric distribution corrective</description>
        <label>EC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER</fullName>
        <active>true</active>
        <description>Electric distribution asset replacement</description>
        <label>ER</label>
    </recordTypes>
    <recordTypes>
        <fullName>GC</fullName>
        <active>true</active>
        <description>Gas distribution corrective</description>
        <label>GC</label>
    </recordTypes>
    <recordTypes>
        <fullName>GR</fullName>
        <active>true</active>
        <description>Gas distribution asset replacement</description>
        <label>GR</label>
    </recordTypes>
    <recordTypes>
        <fullName>OD</fullName>
        <active>true</active>
        <description>OD Notifications</description>
        <label>OD</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM</fullName>
        <active>true</active>
        <description>OM Notifications</description>
        <label>OM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Notification</fullName>
        <active>true</active>
        <description>Other Notifications</description>
        <label>Other Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>P1</fullName>
        <active>true</active>
        <description>P1 Notifications</description>
        <label>P1</label>
    </recordTypes>
    <recordTypes>
        <fullName>P3</fullName>
        <active>true</active>
        <description>P3 Notifications</description>
        <label>P3</label>
    </recordTypes>
    <recordTypes>
        <fullName>S9</fullName>
        <active>true</active>
        <description>Electric staging</description>
        <label>S9</label>
    </recordTypes>
    <recordTypes>
        <fullName>SG</fullName>
        <active>true</active>
        <description>Staging ERR only</description>
        <label>SG</label>
    </recordTypes>
    <recordTypes>
        <fullName>WR</fullName>
        <active>true</active>
        <description>Work requested by others (WRO)</description>
        <label>WR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NotificationNumber</fullName>
        <active>false</active>
        <errorConditionFormula>OR
(
NOT(ISNUMBER(Name)),
AND(ISNUMBER(Name), LEN(Name) &lt;&gt;6)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>NotificationNumber should contain six numbers</errorMessage>
    </validationRules>
</CustomObject>